Modified Chat structure, introduced Message and PrivateMessage. Introduced InvalidReceiverException